2008-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.16.1

2008-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Replaced '@' with 'at' in AUTHOR and REPORT BUG.
	* doc/aria2c.1.txt

2008-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added Ukrainian, Vietnamese, Traditional Chinese translations.
	Updated French, Simplified Chinese and Japanese translations.
	Thanks to all translators.
	en@quot and en@boldquot are also added.
	* po/LINGUAS
	* po/fr.po
	* po/ja.po
	* po/uk.po
	* po/vi.po
	* po/zh_CN.po
	* po/zh_TW.po

2008-10-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.16.1.
	* configure.ac

2008-10-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated README.
	* README

2008-10-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated man page. Changed doctype of aria2c.1.html to manpage in order
	not to replace '--' with em dash character.
	* doc/aria2c.1.txt
	* doc/makeman
	
2008-10-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --auto-save-interval=SEC option. A control file(*.aria2) is saved
	every SEC seconds.
	* src/DownloadEngineFactory.cc
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-10-13  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile warning on linux-amd64
	* src/FtpConnection.cc
	* src/IteratableChunkChecksumValidator.cc
	* src/MultiDiskAdaptor.cc

	Fixed the bug that unit test fails on linux-amd64
	* test/UtilTest.cc

2008-10-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --dht-file-path option to change the path to dht.dat, which is a
	serialized DHT routing table.
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed possible underflow.
	* src/BitfieldMan.cc (BitfieldMan::getNthBitIndex)

2008-10-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
