@@ -41,8 +41,6 @@
 
 namespace aria2 {
 
-#define MAX_BLOCK_LENGTH (128*1024)
-
 class PeerMessageUtil {
 private:
   PeerMessageUtil() {}
