@@ -1,3 +1,14 @@
+2008-10-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Fixed the bug that aria2 aborts when a request larger than 16KiB is
+	recieved.
+	In this fix, if a request larger than 16KiB length is received, aria2
+	disconnects the peer.
+	* src/BtConstants.h
+	* src/PeerMessageUtil.cc
+	* src/PeerMessageUtil.h
+	* test/BtRequestMessageTest.cc
+
 2008-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	* Release 0.16.1
